--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.8.0",
+    "@supabase/supabase-js": "^2.88.0",
+    "lucide-react": "^0.561.0",
     "next": "16.0.10",
+    "openai": "^6.14.0",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
